// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createRouter getState should return initial state 1`] = `
Object {
  "action": null,
  "id": "router/HOME",
  "params": Object {},
  "pathname": "/",
  "prev": null,
  "queryParams": Object {},
  "search": "",
}
`;

exports[`createRouter getState should return new state after back 1`] = `
Object {
  "action": "POP",
  "id": "router/HOME",
  "params": Object {},
  "pathname": "/",
  "prev": Object {
    "action": "REPLACE",
    "id": "router/POSTS",
    "params": Object {},
    "pathname": "/posts",
    "prev": null,
    "queryParams": Object {},
    "search": "",
  },
  "queryParams": Object {},
  "search": "",
}
`;

exports[`createRouter getState should return new state after forward 1`] = `
Object {
  "action": "POP",
  "id": "router/POSTS",
  "params": Object {},
  "pathname": "/posts",
  "prev": Object {
    "action": "POP",
    "id": "router/HOME",
    "params": Object {},
    "pathname": "/",
    "prev": null,
    "queryParams": Object {},
    "search": "",
  },
  "queryParams": Object {},
  "search": "",
}
`;

exports[`createRouter getState should return new state after push 1`] = `
Object {
  "action": "PUSH",
  "id": "router/POST",
  "params": Object {
    "id": "42",
  },
  "pathname": "/posts/42",
  "prev": Object {
    "action": null,
    "id": "router/HOME",
    "params": Object {},
    "pathname": "/",
    "prev": null,
    "queryParams": Object {},
    "search": "",
  },
  "queryParams": Object {},
  "search": "",
}
`;

exports[`createRouter getState should return new state after push with query params 1`] = `
Object {
  "action": "PUSH",
  "id": "router/POSTS",
  "params": Object {},
  "pathname": "/posts",
  "prev": Object {
    "action": "POP",
    "id": "router/POSTS",
    "params": Object {},
    "pathname": "/posts",
    "prev": null,
    "queryParams": Object {},
    "search": "",
  },
  "queryParams": Object {
    "hello": "world",
  },
  "search": "?hello=world",
}
`;

exports[`createRouter getState should return new state after replace 1`] = `
Object {
  "action": "REPLACE",
  "id": "router/POSTS",
  "params": Object {},
  "pathname": "/posts",
  "prev": Object {
    "action": "PUSH",
    "id": "router/POST",
    "params": Object {
      "id": "42",
    },
    "pathname": "/posts/42",
    "prev": null,
    "queryParams": Object {},
    "search": "",
  },
  "queryParams": Object {},
  "search": "",
}
`;

exports[`createRouter markAsNotFound should mark current route as not found 1`] = `
Object {
  "action": "REPLACE",
  "id": "@@routo/NOT_FOUND",
  "params": Object {},
  "pathname": "/posts",
  "prev": Object {
    "action": "PUSH",
    "id": "router/POSTS",
    "params": Object {},
    "pathname": "/posts",
    "prev": null,
    "queryParams": Object {},
    "search": "",
  },
  "queryParams": Object {},
  "search": "",
}
`;

exports[`createRouter options should check custom basename 1`] = `
Object {
  "action": null,
  "id": "@@routo/NOT_FOUND",
  "params": Object {},
  "pathname": "/",
  "prev": null,
  "queryParams": Object {},
  "search": "",
}
`;

exports[`createRouter options should check custom basename 2`] = `
Object {
  "action": "PUSH",
  "id": "router/HOME",
  "params": Object {},
  "pathname": "/app",
  "prev": Object {
    "action": null,
    "id": "@@routo/NOT_FOUND",
    "params": Object {},
    "pathname": "/",
    "prev": null,
    "queryParams": Object {},
    "search": "",
  },
  "queryParams": Object {},
  "search": "",
}
`;

exports[`createRouter options should check custom basename 3`] = `
Object {
  "action": "PUSH",
  "id": "router/POSTS",
  "params": Object {},
  "pathname": "/app/posts",
  "prev": Object {
    "action": "PUSH",
    "id": "router/HOME",
    "params": Object {},
    "pathname": "/app",
    "prev": null,
    "queryParams": Object {},
    "search": "",
  },
  "queryParams": Object {},
  "search": "",
}
`;

exports[`createRouter options should check custom basename 4`] = `
Object {
  "action": "PUSH",
  "id": "router/POST",
  "params": Object {
    "id": "42",
  },
  "pathname": "/app/posts/42",
  "prev": Object {
    "action": "PUSH",
    "id": "router/POSTS",
    "params": Object {},
    "pathname": "/app/posts",
    "prev": null,
    "queryParams": Object {},
    "search": "",
  },
  "queryParams": Object {},
  "search": "",
}
`;

exports[`createRouter options should check custom history 1`] = `
Object {
  "action": null,
  "id": "router/HOME",
  "params": Object {},
  "pathname": "/",
  "prev": null,
  "queryParams": Object {},
  "search": "",
}
`;

exports[`createRouter options should check custom history 2`] = `
Object {
  "action": "PUSH",
  "id": "router/POSTS",
  "params": Object {},
  "pathname": "/posts",
  "prev": Object {
    "action": null,
    "id": "router/HOME",
    "params": Object {},
    "pathname": "/",
    "prev": null,
    "queryParams": Object {},
    "search": "",
  },
  "queryParams": Object {},
  "search": "",
}
`;

exports[`createRouter options should check custom not found path 1`] = `
Object {
  "action": "PUSH",
  "id": "@@routo/NOT_FOUND",
  "params": Object {},
  "pathname": "/custom404",
  "prev": Object {
    "action": null,
    "id": "router/HOME",
    "params": Object {},
    "pathname": "/",
    "prev": null,
    "queryParams": Object {},
    "search": "",
  },
  "queryParams": Object {},
  "search": "",
}
`;

exports[`createRouter push should update state after push for parameterized route 1`] = `
Object {
  "action": "PUSH",
  "id": "router/POST",
  "params": Object {
    "id": "42",
  },
  "pathname": "/posts/42",
  "prev": Object {
    "action": "PUSH",
    "id": "router/POSTS",
    "params": Object {},
    "pathname": "/posts",
    "prev": null,
    "queryParams": Object {
      "sort": "date",
    },
    "search": "?sort=date",
  },
  "queryParams": Object {},
  "search": "",
}
`;

exports[`createRouter push should update state after push for simple route 1`] = `
Object {
  "action": "PUSH",
  "id": "router/HOME",
  "params": Object {},
  "pathname": "/",
  "prev": Object {
    "action": null,
    "id": "router/HOME",
    "params": Object {},
    "pathname": "/",
    "prev": null,
    "queryParams": Object {},
    "search": "",
  },
  "queryParams": Object {},
  "search": "",
}
`;

exports[`createRouter push should update state after push for simple route with query params 1`] = `
Object {
  "action": "PUSH",
  "id": "router/POSTS",
  "params": Object {},
  "pathname": "/posts",
  "prev": Object {
    "action": "PUSH",
    "id": "router/HOME",
    "params": Object {},
    "pathname": "/",
    "prev": null,
    "queryParams": Object {},
    "search": "",
  },
  "queryParams": Object {
    "sort": "date",
  },
  "search": "?sort=date",
}
`;

exports[`createRouter replace should update state after replace for parameterized route 1`] = `
Object {
  "action": "REPLACE",
  "id": "router/POST",
  "params": Object {
    "id": "42",
  },
  "pathname": "/posts/42",
  "prev": Object {
    "action": "REPLACE",
    "id": "router/POSTS",
    "params": Object {},
    "pathname": "/posts",
    "prev": null,
    "queryParams": Object {
      "sort": "date",
    },
    "search": "?sort=date",
  },
  "queryParams": Object {},
  "search": "",
}
`;

exports[`createRouter replace should update state after replace for simple route 1`] = `
Object {
  "action": "REPLACE",
  "id": "router/HOME",
  "params": Object {},
  "pathname": "/",
  "prev": Object {
    "action": null,
    "id": "router/HOME",
    "params": Object {},
    "pathname": "/",
    "prev": null,
    "queryParams": Object {},
    "search": "",
  },
  "queryParams": Object {},
  "search": "",
}
`;

exports[`createRouter replace should update state after replace for simple route with query params 1`] = `
Object {
  "action": "REPLACE",
  "id": "router/POSTS",
  "params": Object {},
  "pathname": "/posts",
  "prev": Object {
    "action": "REPLACE",
    "id": "router/HOME",
    "params": Object {},
    "pathname": "/",
    "prev": null,
    "queryParams": Object {},
    "search": "",
  },
  "queryParams": Object {
    "sort": "date",
  },
  "search": "?sort=date",
}
`;

exports[`createRouter subscribe should run listener after history change 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "action": "PUSH",
        "id": "router/POSTS",
        "params": Object {},
        "pathname": "/posts",
        "prev": Object {
          "action": null,
          "id": "router/HOME",
          "params": Object {},
          "pathname": "/",
          "prev": null,
          "queryParams": Object {},
          "search": "",
        },
        "queryParams": Object {},
        "search": "",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`createRouter subscribe should run listener after history change 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "action": "PUSH",
        "id": "router/POSTS",
        "params": Object {},
        "pathname": "/posts",
        "prev": Object {
          "action": null,
          "id": "router/HOME",
          "params": Object {},
          "pathname": "/",
          "prev": null,
          "queryParams": Object {},
          "search": "",
        },
        "queryParams": Object {},
        "search": "",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
